# pydantic_sweep

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: daily.yml  release.yml  test.yml
docs/: Makefile  conf.py  index.rst
docs/_templates/: footer.html
docs/notebooks/: combinations.pct.py  combinations.pctpy  conversion.pct.py  example.pct.py  intro.pct.py  intro.pctpy  models.pct.py  models.pctpy  nested.pct.py
example/: README.md  runner.py  train.py
src/pydantic_sweep/: __init__.py  _generation.py  _model.py  _utils.py  convert.py  model.py  types.py  utils.py
tests/: __init__.py  test_cli.py  test_convert.py  test_generation.py  test_integration.py  test_model.py  test_model_diff.py  test_nested_dict.py  test_readme.py  test_utils.py
